# stamp_processing

./: .editorconfig  .sun-ci.yml  MANIFEST.in  Makefile  README.md  postprocess.py  pyproject.toml  setup.cfg  setup.py  stamp_detector.py  tox.ini
docs/source/: conf.py  index.rst
example/: example.md
models/: common.py  experimental.py  myYolov5.yaml  yolo.py
stamp_detector/: detector.py  postprocess.py  preprocess.py  test.py  utils.py
stamp_processing/: __init__.py  detector.py  preprocess.py  remover.py  utils.py
stamp_processing/module/: unet.py
stamp_processing/module/yolov5/: __init__.py  hubconf.py
stamp_processing/module/yolov5/models/: common.py  experimental.py  yolo.py
stamp_processing/module/yolov5/utils/: autoanchor.py  datasets.py  general.py  plots.py  torch_utils.py
tests/unit/: test_detector.py  test_preprocess.py  test_remover.py  test_utils.py
utils/: autoanchor.py  datasets.py  general.py  torch_utils.py
weight/: traced_weight.pt
