[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[flake8]
exclude = venv
max-line-length = 120

# E203: whitespace before ':'
# E402: Module level import not at top of file
# N806: Variable in function should be lowercase
# N812: lowercase imported as non lowercase
# W503: Line break occurred before binary operator
# F403: 'from module import *' used; unable to detect undefined names
# F405: Name may be undefined, or defined from star imports: module
ignore = E203, E402, N806, N812, W503,  F403, F405

# F401: Module imported but unused
per-file-ignores =
    __init__.py: F401
    scripts/prepare_data.py: E501

[mypy]
ignore_missing_imports = True
no_strict_optional = True